# napari-cosmos-ts

./: .pdm-python  LICENSE  README.md  napari-cosmos-ts.py  napari_cosmos_ts.py  pyproject.toml
.github/workflows/: build-test.yml  publish.yml
old/: napari_cosmos_ts.py
src/: load_napari_cosmos_ts_session.m
src/napari_cosmos_ts/: main_widget.py  napari.yaml
