[project]
name = "napari-cosmos-ts"
description = "napari plugin for colocalization single-molecule spectroscopy (CoSMoS) time series (TS) analysis"
authors = [
    {name = "Marcel Goldschen-Ohm"},
    {name = "Marcel Goldschen-Ohm", email = "goldschen-ohm@utexas.edu"},
]
dependencies = [
    "napari>=0.4.19.post1",
    "pyqtgraph>=0.13.4",
    "pystackreg>=0.2.7",
    "pycpd>=2.0.0",
    "qtawesome>=1.3.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Framework :: napari",
    "Programming Language :: Python :: 3 :: Only",
]


[project.entry-points."napari.manifest"]
napari-cosmos-ts = "napari_cosmos_ts:napari.yaml"


[project.urls]
homepage = "https://github.com/marcel-goldschen-ohm/napari-cosmos-ts"
repository = "https://github.com/marcel-goldschen-ohm/napari-cosmos-ts"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.pdm.version]
source = "scm"


[tool.pdm.package-data]
napari-cosmos-ts = [
    "src/napari_cosmos_ts/napari.yaml"
]
