[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "napari-cosmos-ts"
description = "napari plugin for colocalization single-molecule spectroscopy (CoSMoS) time series (TS) analysis"
dynamic = ["version"]
authors = [
    {name = "Marcel Goldschen-Ohm"},
    {name = "Marcel Goldschen-Ohm", email = "goldschen-ohm@utexas.edu"},
]
dependencies = [
    #"pyqt5-qt5==5.15.2 ; platform_system=='Windows'",
    #"napari[all]>=0.4.19.post1",
    "numpy<2", # for numba and dipy compatibility
    "qtpy>=2.4.1",
    "pyqtgraph>=0.13.4",
    "scikit-image>=0.24.0",
    #"pystackreg>=0.2.7",
    #"SimpleITK>=2.4.0",
    "dipy>=1.9.0",
    "pycpd>=2.0.0",
    "qtawesome>=1.3.1",
    "h5py>=3.11.0",
]
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Framework :: napari",
    "Programming Language :: Python :: 3 :: Only",
]


[project.entry-points."napari.manifest"]
napari-cosmos-ts = "napari_cosmos_ts:napari.yaml"


[project.urls]
homepage = "https://github.com/marcel-goldschen-ohm/napari-cosmos-ts"
repository = "https://github.com/marcel-goldschen-ohm/napari-cosmos-ts"


[tool.pdm]
distribution = true


[tool.pdm.version]
source = "scm"


[tool.pdm.package-data]
napari-cosmos-ts = [
    "src/napari_cosmos_ts/napari.yaml"
]


[tool.pdm.dev-dependencies]
lint = [
    "flake8>=7",
]
test = [
    "pytest>=8",
    "pytest-cov>=5",
]
